// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Text" renders (dark theme) 1`] = `
.emotion-1 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: #fff;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders as block 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: block;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders bold 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 600;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders centered 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: center;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders light 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 200;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders muted 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 0.56;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders no wrap 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
  white-space: nowrap;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with color 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: #2391d3;
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with size 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 2px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with textTransform 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: uppercase;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Text
  </span>
</div>
`;

exports[`"Text" renders with truncation 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: uppercase;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  </span>
</div>
`;

exports[`Utility components renders Bold 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 600;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Bold
  </span>
</div>
`;

exports[`Utility components renders Large 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 48px;
  font-weight: 200;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Large
  </span>
</div>
`;

exports[`Utility components renders Muted 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 0.56;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Muted
  </span>
</div>
`;

exports[`Utility components renders Small 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 12px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: none;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Small
  </span>
</div>
`;

exports[`Utility components renders Uppercase 1`] = `
.emotion-1 {
  background: rgb(247,248,250);
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-0 {
  color: rgb(52,56,59);
  display: inline;
  font-size: 16px;
  font-weight: 300;
  opacity: 1;
  text-align: left;
  text-transform: uppercase;
}

<div
  className="emotion-1"
>
  <span
    className="emotion-0"
  >
    Uppercase
  </span>
</div>
`;
